CreditCardParser refactoring